# proofkit

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_B_SHADOW_RUNS_SUMMARY.md  AGENT_C_VERIFICATION_SUMMARY.md  AGENT_SUMMARY.md  AUDIT_REPORT_BLOG_FIXES.md  BACKOUT.md  BATCH_L6_GA4_ADS_IMPLEMENTATION.md  BLOG_IMPLEMENTATION_SUMMARY.md  CERTIFICATE_FIXES_SUMMARY.md  CHANGELOG.md  CHECKLIST.md  CI_CD_README.md  CLAUDE.md  COVERAGE_AUDIT_REPORT.md  COVERAGE_REPORT.md  DEPENDENCY_AUDIT.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_FINAL.md  DNS_DMARC_SETUP.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_LAUNCH_REPORT.md  GOOGLE_2025_BLOG_STRATEGY.md  LAUNCH_MONITORING_CHECKLIST.md  LAUNCH_REPORT.md  M12_COMPLIANCE_AUDIT_REPORT.md  MARKETING_SPRINT_90.md  MARKETING_SPRINT_EXECUTION_REPORT.md  Makefile  NAVIGATION_IMPLEMENTATION.md  POST_DEPLOY_AUDIT.md  PR-C-EXAMPLES_SUMMARY.md  PR-F-CI_SUMMARY.md  QUICK_SEO_SETUP.md  README.md  REALITY_CHECK_COMPLETE.md  (+60 more)
.well-known/: security.txt
api/: __init__.py
audit/: FINAL_AUDIT_REPORT.md  FINAL_STATUS.md  HARDEN2_AUDIT_REPORT.md  HARDEN3_AUDIT_REPORT.md  HARDEN5_FINAL_REPORT.md  RESCUE_STATUS.md
auth/: __init__.py  magic.py  models.py
cli/: __init__.py  audit_fallback.py  audit_runner.py  main.py  migrate.py  registry_validation.py  release_check.py  validate_campaign.py
core/: __init__.py  billing.py  cleanup.py  columns_map.py  db.py  decide.py  email.py  errors.py  industry_router.py  logging.py  metrics.py  metrics_autoclave.py  metrics_coldchain.py  metrics_concrete.py  metrics_concrete.py.bak  metrics_haccp.py  metrics_haccp.py.bak  metrics_powder.py  metrics_sterile.py  metrics_sterile.py.bak  models.py  models_sql.py  normalize.py  pack.py  plot.py  policy.py  render_certificate.py  render_certificate_premium.py  render_certificate_pro.py  render_pdf.py  scheduler.py  sensor_utils.py  shadow_compare.py  spec_schema.json  stripe_util.py  temperature_utils.py  timestamp.py  types.py  upsell.py  validation.py  (+1 more)
data/: test_decision_fail.json  test_decision_pass.json  test_spec.json
docs/: BACKUP.md  BACKUP_RESTORE.md  CI_MERGE_POLICY.md  DEPLOY.md  DNS_SETUP.md  EMAIL_DMARCRAMP.md  EMAIL_SETUP.md  GO_LIVE_CHECKLIST.md  INFRA_AWS_SETUP.md  LIVE_QA.md  MONITORING.md  OPERATIONS_CHECKLIST.md  PDF_NOTES.md  SECURITY_HEADERS.md  TRIAL_PROTECTION.md  VALIDATION_CAMPAIGN.md
examples/: README.md  autoclave-medical-device-validation.json  autoclave_missing_pressure_indeterminate.csv  autoclave_sterilization_fail.csv  coldchain_storage_fail.csv  concrete-curing-astm-c31.json  concrete_curing_fail.csv  concrete_curing_pass.csv  gaps.csv  haccp_cooling_fail.csv  haccp_cooling_pass.csv  load_examples.py  normalize_example.py  ok_run.csv  pack_example.py  passing_run.csv  pdf_example.py  plot_example.py  powder_coat_cure_cumulative_hold_pass_170c_20min.csv  powder_coat_cure_data_gaps_sensor_disconnect_fail.csv  powder_coat_cure_fahrenheit_input_356f_10min_pass.csv  powder_coat_cure_sensor_failure_mid_run_fail.csv  powder_coat_cure_slow_ramp_rate_fail.csv  powder_coat_cure_spec_cumulative_hold_170c_20min.json  powder_coat_cure_spec_fahrenheit_input_356f_10min.json  powder_coat_cure_spec_standard_180c_10min.json  powder_coat_cure_spec_strict_tolerances_190c_15min.json  powder_pass_fixed.csv  powder_pass_spec_fixed.json  short_hold.csv  spec_example.json  verify_example.py
marketing/: BATCH1_COMPLETION_REPORT.md  BATCH_2_AUDIT_REPORT.md  BATCH_3_COMPLETION_REPORT.md  BATCH_4_AUDIT_REPORT.md  BATCH_7_AUDIT_REPORT.md  examples.html  lighthouse_report.json  linkable-files-index.md  sitemap.xml  trust.md
middleware/: __init__.py  current_user.py  quota.py  trial_protection.py
migrations/: 001_init.sql
public/: robots.txt
quota/: postgres.py
runbooks/: INCIDENT.md
scripts/: backup.sh  backup_to_s3.sh  billing_sanity.py  check_email.py  check_email_postmark.py  check_example_truth.py  coverage_focus.py  coverage_gate.py  diff_check.py  domain_setup_www.sh  emit_metrics.py  flaky_guard.py  generate_examples_manifest.py  inspect_pdf.py  live_pdf_audit.py  make_golden_pack.py  metrics_export.py  post_deploy_smoke.py  pre_deploy.sh  registry_sanity.py  render_dashboard.py  run_authenticated_audit.py  run_comprehensive_audit.py  run_final_audit.py  run_liveqa_v3.py  run_simple_test.py  setup_production_secrets.sh  test_fixed_examples.py  trial_protection_admin.py  ui_smoke.py  (+2 more)
(+565 files in other folders)
